name:           binding-core
version:        0.2
cabal-version:  >= 1.9.2
author:         Gideon Sireling
maintainer:     code@accursoft.com
homepage:       http://code.accursoft.com/binding
bug-reports:    http://code.accursoft.com/binding/issues
synopsis:       Data Binding
build-type:     Simple
category:       GUI, User Interfaces

library
  build-depends:   base, stm
  hs-source-dirs:  src
  exposed-modules: Binding.Variable, Binding.Core, Binding.List

test-suite hunit
  type:            exitcode-stdio-1.0
  main-is:         tests.hs
  build-depends:   base, binding-core, random, HUnit

source-repository head
  type:     hg
  location: https://bitbucket.org/accursoft/binding